Navigation menu open my default shifting issues change

--- a/web/Website/styles/layout/_main.scss
+++ b/web/Website/styles/layout/_main.scss
@@ -23,11 +23,6 @@ main {
 		flex: 0 0 auto;
 		margin-left: 330px; // RH added on 2/26 to fix IIPP-572
 	}
-
-	&.shift-main-content{
-		margin-left: 300px;
-	}
-
 	@include breakpoint('small') {
 		width: 100%;
 		margin-left: 330px;
@@ -44,7 +39,9 @@ main {
 	width: 100%;
 }
 .shift-main-content{
-	margin-left: -330px;
+	left: 0;
+	transform: translate3d(0, 0, 0) !important;
+	-webkit-transform: translate3d(0, 0, 0) !important;
 }
 .main__content {
 	max-width: 1240px;
